<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="24dp">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RoleSelection"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="20dp" />

        <Button
            android:id="@+id/btnRoleUser"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:text="@string/Role1"
            android:background="@drawable/btn_plum_rounded"
            android:textSize="18sp"
            android:layout_marginBottom="10dp" />

        <Button
            android:id="@+id/btnRoleVendor"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_plum_rounded"
            android:text="@string/Role2"
            android:textSize="18sp"
            android:layout_marginBottom="30dp" />

        <Button
            android:id="@+id/btnContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/RoleContinueButtonText"
            android:textColor="@color/black"
          android:background="@color/white"
            android:visibility="gone" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>