<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/signUp_card"
        android:layout_width="0dp"
        android:padding="25dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/card_yellow_rounded"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_percent="0.85"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <TextView
            android:id="@+id/SignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textSize="34sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <!-- Username field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/edt_rounded"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_person_24"
                android:layout_marginEnd="8dp"
                app:tint="#888888"/>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/SignUpUserHint"
                android:textColor="@color/black"
                android:textColorHint="#8C8888"
                android:textSize="14sp"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <!-- Password field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/edt_rounded"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_lock_24"
                android:layout_marginEnd="8dp"
                app:tint="#888888"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/SingUpPasswordHint"
                android:textColor="@color/black"
                android:textColorHint="#8A8686"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp"/>

        <!-- Confirm Password field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/edt_rounded"
            android:padding="8dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_lock_24"
                android:layout_marginEnd="8dp"
                app:tint="#888888"/>

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/ConfirmPasswordHint"
                android:textColor="@color/black"
                android:textColorHint="#7C7979"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:background="@android:color/transparent"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <!-- Sign Up button -->
        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_yellow_rounded"
            android:text="@string/sign_up_btn"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <!-- Divider + “or connect with” -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:text="@string/or_connect_with"
                android:textColor="#555555"
                android:textSize="14sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@color/white"/>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/btnFacebook"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/btn_social"
                android:drawableStart="@drawable/ic_facebook"
                android:drawablePadding="8dp"
                android:text="@string/facebook"
                android:layout_marginBottom="2dp"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvAlreadyUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have account?"
                android:layout_marginLeft="70dp"
                android:textColor="@color/white"
                app:layout_constraintHorizontal_bias="0.397" />

            <TextView
                android:id="@+id/tvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:text="Login"
                android:textStyle="bold"
                android:textColor="#9754F4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.078"
                app:layout_constraintStart_toEndOf="@id/tvAlreadyUser"
                app:layout_constraintTop_toBottomOf="@+id/signUp_card" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
