<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">


    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_login_gradient"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/login_card"
        android:layout_width="321dp"
        android:layout_height="467dp"
        android:background="@drawable/card_yellow_rounded"
        android:orientation="vertical"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintWidth_percent="0.85">

        <TextView
            android:id="@+id/tvLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/login_title"
            android:textColor="#333333"
            android:textSize="34sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="27dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/edt_rounded"
            android:padding="8dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_person_24"
                android:layout_marginEnd="8dp"
                app:tint="#888888" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="213dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:hint="@string/LoginTextFieldHint"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:textColorHint="#8C8888"
                android:textSize="14sp" />
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="16dp" />

        <!-- Password field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/edt_rounded"
            android:padding="8dp"
            android:layout_marginTop="10dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_lock_24"
                android:layout_marginEnd="8dp"
                app:tint="#888888" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:textColorHint="#8C8888"
                android:textColor="@color/black"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textSize="14sp" />
        </LinearLayout>


        <Space
            android:layout_width="match_parent"
            android:layout_height="26dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_plum_rounded"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvForgottenPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="12dp"
            android:text="@string/forgot_your_password"
            android:textColor="#555555"
            android:textSize="14sp" />


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginEnd="@dimen/start_end_margin"
            android:gravity="center"
            android:padding="0dp">

            <TextView
                android:id="@+id/tvfb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log in with Facebook"
                android:textColor="#545353"
                android:textSize="12dp" />

            <ImageView
                android:id="@+id/ivFb"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/ic_facebook"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llOr"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:layout_marginStart="@dimen/start_end_margin"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="@dimen/start_end_margin"
            android:gravity="center">

            <TextView
                android:id="@+id/tvNewUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NoAccountQuestion"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.397"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginBottom="2dp"
                android:text="Sign Up"
                android:textStyle="bold"
                android:textColor="#9754F4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvNewUser" />

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>